Made alot of changes

--- a/instructions.html
+++ b/instructions.html
@@ -1,65 +1,110 @@
 <!doctype html>
 <html class="no-js" lang="">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>CS4249 Assignment 1</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="css/style.css">
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-    </head>
-    <body>
-        <!--[if lt IE 8]>
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>CS4249 Assignment 1</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+</head>
+
+<body>
+    <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <nav class="navbar navbar-default">
-            <div class="container">
-                <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav">
-                        <li><a href="index.html">Welcome</a></li>
-                        <li><a href="questionnaire-pre.html">Pre Questionnaire</a></li>
-                        <li class="active"><a href="instructions.html">Instructions</a></li>
-                        <li><a href="experiment.html">Experiment</a></li>
-                        <li><a href="questionnaire-post.html">Post Questionnaire</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-
+    <nav class="navbar navbar-default">
         <div class="container">
-            <div class="row">
-                <div class="col-md-8 col-md-offset-2">
-                    <h1>Instructions</h1>
-                    <hr>
-                    <p>Dear participant <span class="js-pid pid"></span>, please read the instructions before the experiment.
-
-                    <p>There should always be an instruction before doing the actual evaluation of the interface.<p>
-                    <p>Enter your instructions to your participant here. Diagrams and screenshots will be very helpful!</p>
-
-                    <form class="form-inline">
-                        <button type="submit" class="btn btn-primary btn-lg">Next</button>
-                    </form>
-                </div>
+            <div class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="index.html">Welcome</a></li>
+                    <li><a href="questionnaire-pre.html">Pre Questionnaire</a></li>
+                    <li class="active"><a href="instructions.html">Instructions</a></li>
+                    <li><a href="experiment.html">Experiment</a></li>
+                    <li><a href="questionnaire-post.html">Post Questionnaire</a></li>
+                </ul>
             </div>
         </div>
+    </nav>
 
-        <script src="js/vendor/jquery-1.11.2.min.js"></script>
-        <script src="js/plugins.js"></script>
-        <script src="js/DataStorage.js"></script>
-        <script src="js/ACPToolKit.js"></script>
-        <script src="js/main.js"></script>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2">
+                <h1>Instructions</h1>
+                <hr>
+                <p>Dear participant <span class="js-pid pid"></span>, please read the instructions before the experiment.</p>
 
-        <script>
-            $(function () {
-                $('form').submit(function (event) {
-                    event.preventDefault();
-                    window.location = 'experiment.html';
-                });
+                <!--<p>There should always be an instruction before doing the actual evaluation of the interface.<p>
+                    <p>Enter your instructions to your participant here. Diagrams and screenshots will be very helpful!</p>-->
+
+                <p>The experiment will consist of 6 tasks for you to complete.</p>
+                <p>The technique that you are using, the granularity (the length of text to copy), the number of windows open and the trial number are given in a table on the left of the screen with the white background.</p>
+                <p>The text to be copied is highlighted in pink on the left side of the screen.</p>
+                <p>The text editor and articles to be used are given on the right side of the screen with the grey background.</p>
+                <p>The text that you need to copy can be found in the articles highlighted in yellow. Please refer to Figure 1 below.</p>
+
+                <img src="Slide1.JPG" alt="Figure1" style="width:100%;height:auto;">
+                <center>Figure 1</center>
+
+                <p>You will first be tasked to use AutoComPaste to copy the selected text into the text editor.</p>
+                <p>To do so, click the text editor and start typing the text to copy. The text will appear in a dropdown box. Please refer to Figure 2 below.</p>
+
+                <img src="Slide2.JPG" alt="Figure2" style="width:100%;height:auto;">
+                <center>Figure 2</center>
+
+                <p>To choose the text that you wish to copy, either click the text or press enter to paste the text highlighted in blue in the dropdown box into the text editor.</p>
+                <p>The result should look similar to that in Figure 3 below.</p>
+
+                <img src="Slide3.JPG" alt="Figure3" style="width:100%;height:auto;">
+                <center>Figure 3</center>
+
+                <p>Once done, click the Next Task blue button and continue with the next two tasks.</p>
+                <p>For the 4th task onwards, you will be required to use the traditional method of copying and pasting text, which is by using CTRL-C and CTRL-V. The screen should look like that in Figure 4.</p>
+
+                <img src="Slide4.JPG" alt="Figure4" style="width:100%;height:auto;">
+                <center>Figure 4</center>
+
+                <p>Continue by using CTRL-C and CTRL-V to copy and paste the required text into the text editor. Please refer to Figure 5 below.</p>
+
+                <img src="Slide5.JPG" alt="Figure5" style="width:100%;height:auto;">
+                <center>Figure 5</center>
+
+                <p>Paste the text into the text editor to complete the task. The end result should like the screen given in Figure 6. and click the Next Task blue button to proceed with the next few tasks.</p>
+
+                <img src="Slide6.JPG" alt="Figure6" style="width:100%;height:auto;">
+                <center>Figure 6</center>
+
+                <p>Once all 6 tasks are completed, please continue to fill up the post-experiment questionnaire.</p>
+                <p>Thank you for your participation.</p>
+
+
+                <form class="form-inline">
+                    <button type="submit" class="btn btn-primary btn-lg">Next</button>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <script src="js/vendor/jquery-1.11.2.min.js"></script>
+    <script src="js/plugins.js"></script>
+    <script src="js/DataStorage.js"></script>
+    <script src="js/ACPToolKit.js"></script>
+    <script src="js/main.js"></script>
+
+    <script>
+        $(function() {
+            $('form').submit(function(event) {
+                event.preventDefault();
+                window.location = 'experiment.html';
             });
-        </script>
-    </body>
+        });
+
+    </script>
+</body>
+
 </html>
