--- a/questionnaire-post.html
+++ b/questionnaire-post.html
@@ -42,39 +42,37 @@
                 <p>Participant No: <span class="js-pid pid"></span></p>
                 <p>Thank you for your participation in the experiment! Just one last thing before we can properly conclude the session. Please fill in the information for all the fields below.</p>
 
-
-
                 <form id="post-expt-form">
 
                     <div class="form-group">
                         <label for="q1">AutoComPaste is easy to learn.</label>
                         <div class="radio">
                             <label>
-                                <input type="radio" name="q1" id="optionsRadios1" value="radio1">
+                                <input type="radio" name="q1" id="optionsRadios1" value="Strongly disagree">
                                 Strongly disagree
                               </label>
                         </div>
                         <div class="radio">
                             <label>
-                                <input type="radio" name="q1" id="optionsRadios2" value="radio2">
+                                <input type="radio" name="q1" id="optionsRadios2" value="Disagree">
                                 Disagree
                               </label>
                         </div>
                         <div class="radio">
                             <label>
-                                <input type="radio" name="q1" id="optionsRadios3" value="radio3">
+                                <input type="radio" name="q1" id="optionsRadios3" value="Neutral">
                                 Neutral
                               </label>
                         </div>
                         <div class="radio">
                             <label>
-                                <input type="radio" name="q1" id="optionsRadios4" value="radio4">
+                                <input type="radio" name="q1" id="optionsRadios4" value="Agree">
                                 Agree
                               </label>
                         </div>
                         <div class="radio">
                             <label>
-                                <input type="radio" name="q1" id="optionsRadios5" value="radio5">
+                                <input type="radio" name="q1" id="optionsRadios5" value="Strongly agree">
                                 Strongly Agree
                               </label>
                         </div>
@@ -84,31 +82,31 @@
                         <label for="q2">AutoComPaste is easy to use.</label>
                         <div class="radio">
                             <label>
-                                <input type="radio" name="q2" id="optionsRadios1" value="radio1">
+                                <input type="radio" name="q2" id="optionsRadios1" value="Strongly disagree">
                                 Strongly disagree
                               </label>
                         </div>
                         <div class="radio">
                             <label>
-                                <input type="radio" name="q2" id="optionsRadios2" value="radio2">
+                                <input type="radio" name="q2" id="optionsRadios2" value="Disagree">
                                 Disagree
                               </label>
                         </div>
                         <div class="radio">
                             <label>
-                                <input type="radio" name="q2" id="optionsRadios3" value="radio3">
+                                <input type="radio" name="q2" id="optionsRadios3" value="Neutral">
                                 Neutral
                               </label>
                         </div>
                         <div class="radio">
                             <label>
-                                <input type="radio" name="q2" id="optionsRadios4" value="radio4">
+                                <input type="radio" name="q2" id="optionsRadios4" value="Agree">
                                 Agree
                               </label>
                         </div>
                         <div class="radio">
                             <label>
-                                <input type="radio" name="q2" id="optionsRadios5" value="radio5">
+                                <input type="radio" name="q2" id="optionsRadios5" value="Strongly agree">
                                 Strongly Agree
                               </label>
                         </div>
@@ -119,31 +117,31 @@
                         <label for="q3">AutoComPaste is easier to pick up as compared to CTRL-C and CTRL-V.</label>
                         <div class="radio">
                             <label>
-                                <input type="radio" name="q3" id="optionsRadios1" value="radio1">
+                                <input type="radio" name="q3" id="optionsRadios1" value="Strongly disagree">
                                 Strongly disagree
                               </label>
                         </div>
                         <div class="radio">
                             <label>
-                                <input type="radio" name="q3" id="optionsRadios2" value="radio2">
+                                <input type="radio" name="q3" id="optionsRadios2" value="Disagree">
                                 Disagree
                               </label>
                         </div>
                         <div class="radio">
                             <label>
-                                <input type="radio" name="q3" id="optionsRadios3" value="radio3">
+                                <input type="radio" name="q3" id="optionsRadios3" value="Neutral">
                                 Neutral
                               </label>
                         </div>
                         <div class="radio">
                             <label>
-                                <input type="radio" name="q3" id="optionsRadios4" value="radio4">
+                                <input type="radio" name="q3" id="optionsRadios4" value="Agree">
                                 Agree
                               </label>
                         </div>
                         <div class="radio">
                             <label>
-                                <input type="radio" name="q3" id="optionsRadios5" value="radio5">
+                                <input type="radio" name="q3" id="optionsRadios5" value="Strongly agree">
                                 Strongly Agree
                               </label>
                         </div>
@@ -154,31 +152,31 @@
                         <label for="q4">AutoComPaste is easier to use as compared to CTRL-C and CTRL-V.</label>
                         <div class="radio">
                             <label>
-                                <input type="radio" name="q4" id="optionsRadios1" value="radio1">
+                                <input type="radio" name="q4" id="optionsRadios1" value="Strongly disagree">
                                 Strongly disagree
                               </label>
                         </div>
                         <div class="radio">
                             <label>
-                                <input type="radio" name="q4" id="optionsRadios2" value="radio2">
+                                <input type="radio" name="q4" id="optionsRadios2" value="Disagree">
                                 Disagree
                               </label>
                         </div>
                         <div class="radio">
                             <label>
-                                <input type="radio" name="q4" id="optionsRadios3" value="radio3">
+                                <input type="radio" name="q4" id="optionsRadios3" value="Neutral">
                                 Neutral
                               </label>
                         </div>
                         <div class="radio">
                             <label>
-                                <input type="radio" name="q4" id="optionsRadios4" value="radio4">
+                                <input type="radio" name="q4" id="optionsRadios4" value="Agree">
                                 Agree
                               </label>
                         </div>
                         <div class="radio">
                             <label>
-                                <input type="radio" name="q4" id="optionsRadios5" value="radio5">
+                                <input type="radio" name="q4" id="optionsRadios5" value="Strongly agree">
                                 Strongly Agree
                               </label>
                         </div>
@@ -189,13 +187,13 @@
                         <label for="q5">Which technique of copying and pasting do you prefer using?</label>
                         <div class="radio">
                             <label>
-                                <input type="radio" name="q5" id="optionsRadios1" value="radio1">
+                                <input type="radio" name="q5" id="optionsRadios1" value="CTRL-C CTRL-V">
                                 CTRL-C and CTRL-V
                               </label>
                         </div>
                         <div class="radio">
                             <label>
-                                <input type="radio" name="q5" id="optionsRadios2" value="radio2">
+                                <input type="radio" name="q5" id="optionsRadios2" value="AutoComPaste">
                                 AutoComPaste
                               </label>
                         </div>
